--- a/finished-exmple.css
+++ b/finished-exmple.css
@@ -6,8 +6,7 @@
     REF: https://css-tricks.com/snippets/css/font-stacks/
     */
     body {
-        font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
-    }
+        font-family: Arial, Helvetica, sans-serif;
     
     /* Horizontal rules */
     hr {
@@ -22,11 +21,6 @@
         float: right;
         font-style: italic;
         font-size: .5em;        
-    }
-
-    /* Disable/Hide Image */
-    img {
-        display: none;
     }
     
     /* Show URLs to Social Media */
